[package]
name = "tilth-tf"
version = "0.1.1"
edition = "2024"
description = "A CLI that makes running Terraform safer and easier for teams — without requiring anyone to memorize or hardcode variables in advance."
repository = "https://github.com/Aaqeb11/tilth"
readme = "README.md"
license = "MIT"
keywords = ["terraform", "cli", "infrastructure", "wrapper", "hcl"]
categories = ["command-line-utilities"]

[[bin]]
name = "tilth"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
hcl-rs = "0.19.7"
inquire = "0.9.4"
serde_json = "1.0.150"
